# PasswordManager

./: .gitignore  CMakeLists.txt  LICENSE  PasswordManager.nsi  README.md  Structure.md  prd.md
installer/: README.md
installer/linux/: create_appimage.sh  create_deb.sh
installer/windows/: PasswordManager.iss  PasswordManager.nsi
resources/: resources.qrc
src/: CMakeLists.txt  database.cpp  database.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  passworddialog.cpp  passworddialog.h  passwordmanager.cpp  passwordmanager.h
